--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +10,18 @@
 </head>
 
 <body>
-
-    <button id="title">Etch A Sketch</button>
+    <header class="header">
+        <button id="title" class="titlebtn">Change Grid Size</button>
+    </header>
 
     <section id="main"></section>
 
-    <div class="footer">
+    <footer class="footer">
         <div class="circle leftc"></div>
-        <p class="text">Created by Erick Robles</p>
+        <p id="project-title">Etch A Sketch</p>
+        <p id="project-author">Created by Erick Robles</p>
         <div class="circle rightc"></div>
-    </div>
+    </footer>
     <script src="etchASketch.js"></script>
 </body>
 
